feat :repare list filter